--- a/NLI/Views/Shared/_Layout.cshtml
+++ b/NLI/Views/Shared/_Layout.cshtml
@@ -2,18 +2,27 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
-
+    <title>הספרייה הלאומית</title>
+    <link href="~/Built/main.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <div class="container body-content">
-        @RenderBody()
-    </div>
-
-    @Scripts.Render("~/bundles/jquery")
-    @RenderSection("scripts", required: false)
+    <div id="root"></div>
+    @RenderBody()
+    <script>
+        @Html.Raw(ViewBag.PageData);
+        @Html.Raw(ViewBag.BaseUrl);
+      @{
+          string baseUrl = Url.Content("~/");
+          if (baseUrl[baseUrl.Length - 1] != '/')
+          {
+              baseUrl = string.Format("{0}/", baseUrl);
+          }
+       }
+        window.basePath = '@baseUrl';
+    </script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+            crossorigin="anonymous"></script>
+    <script src="~/Built/main.js"></script>
 </body>
 </html>
