--- a/NLI/Components/TimeLine/TimeLine.scss
+++ b/NLI/Components/TimeLine/TimeLine.scss
@@ -1,2 +1,56 @@
 ﻿body {
+    background-color: #0F0062;
+
+    .timeline{
+        max-width: 800px;
+        margin: 0 auto;
+    }
+
+    .timeline-item:hover{
+        cursor: pointer;
+    }
+
+    .timeline-item{
+
+        background: linear-gradient(0deg,rgba(108,138,255,0.6),rgba(153,114,255,0.6)),url('/Content/images/de_los_insurgentes_avenue_chihuahua_mexico.jpg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        margin: 1rem;
+        border-radius: 5px;
+        padding: 5rem;
+
+        .timeline-item-title{
+            font-size: 60px;
+            margin: 1rem;
+            font-family: 'Helvetica Neue';
+        }
+
+        .timeline-item-count{
+            font-size: 30px;
+            margin: 1rem;
+            font-family: 'Rubik';
+        }
+    }
+
+    .timeline-item:nth-child(1){
+        background: linear-gradient(0deg,rgba(153,114,255,0.9)), (rgba(108,138,255,0.9)),url('/Content/images/de_los_insurgentes_avenue_chihuahua_mexico.jpg');
+    }
+
+    .timeline-item:nth-child(2){
+        background: linear-gradient(0deg,rgba(108,138,255,0.6),rgba(153,114,255,0.6)),url('/Content/images/de_los_insurgentes_avenue_chihuahua_mexico.jpg');
+    }
+    .timeline-item:nth-child(3){
+        background: linear-gradient(0deg,rgba(108,138,255,0.6),rgba(153,114,255,0.6)),url('/Content/images/de_los_insurgentes_avenue_chihuahua_mexico.jpg');
+    }
+    .timeline-item:nth-child(4){
+        background: linear-gradient(0deg,rgba(108,138,255,0.6),rgba(153,114,255,0.6)),url('/Content/images/de_los_insurgentes_avenue_chihuahua_mexico.jpg');
+    }
+    .timeline-item:nth-child(5){
+        background: linear-gradient(0deg,rgba(108,138,255,0.6),rgba(153,114,255,0.6)),url('/Content/images/de_los_insurgentes_avenue_chihuahua_mexico.jpg');
+    }
+    .timeline-item:nth-child(6){
+        background: linear-gradient(0deg,rgba(108,138,255,0.6),rgba(153,114,255,0.6)),url('/Content/images/de_los_insurgentes_avenue_chihuahua_mexico.jpg');
+    }
+
 }
