--- a/NLI/Components/Categories/Categories.scss
+++ b/NLI/Components/Categories/Categories.scss
@@ -1,2 +1,20 @@
-﻿body {
+﻿
+
+.categories-decade-info-wrp{
+    margin-bottom: -4rem;
+
 }
+    .categories{
+        max-width: 800px;
+        margin: 0 auto;
+    }
+
+    .categories-decade-info{
+        background: #2475FA;
+
+    }
+
+    .categories-content-wrp{
+        background-color: white;
+    }
+
