--- a/NLI/Assets/Css/fonts.scss
+++ b/NLI/Assets/Css/fonts.scss
@@ -19,3 +19,13 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'Arimo Regular';
+    src: url('/Content/fonts/Arimo-Regular.eot');
+    src: url('/Content/fonts/Arimo-Regular.eot?#iefix') format('embedded-opentype'),
+        url('/Content/fonts/Arimo-Regular.woff') format('woff'),
+        url('/Content/fonts/Arimo-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
