--- a/NLI/Components/Categories/Components/CategoryItem/CategoryItem.scss
+++ b/NLI/Components/Categories/Components/CategoryItem/CategoryItem.scss
@@ -1,2 +1,18 @@
 ﻿body {
+
+    .categories-decade-info{
+        padding: 10rem;
+        position: relative;
+        font-weight: bold;
+    }
+
+    .categories-decade-title{
+        font-size: 80px;
+        font-family:'Rubik';
+    }
+
+    .categories-decade-count{
+        font-size: 39px;
+        font-family:'Helvetica Neue';
+    }
 }
