--- a/NLI/Built/main.css
+++ b/NLI/Built/main.css
@@ -278,7 +278,8 @@ body {
   background: #2475FA; }
 
 .categories-content-wrp {
-  background-color: white; }
+  background-color: white;
+  font-family: 'Arimo Regular'; }
 .categories-content-wrp {
   display: -webkit-box;
   display: -webkit-flex;
@@ -356,13 +357,80 @@ body {
   z-index: 20; }
 body .categories-decade-info {
   padding: 10rem;
-  position: relative;
-  font-weight: bold; }
+  position: relative; }
 
 body .categories-decade-title {
   font-size: 80px;
-  font-family: 'Rubik'; }
+  font-family: 'Rubik';
+  font-weight: bold; }
 
 body .categories-decade-count {
   font-size: 39px;
   font-family: 'Helvetica Neue'; }
+body #root {
+  background-color: white;
+  min-width: 0 !important; }
+body .tag-list {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+body .tag-item {
+  width: 135px;
+  height: 135px;
+  background: url("/Content/images/de_los_insurgentes_avenue_chihuahua_mexico.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  -moz-background-size: cover;
+       background-size: cover;
+  margin: 13px;
+  -moz-border-radius: 10px;
+       border-radius: 10px;
+  -webkit-box-flex: 0;
+  -webkit-flex-grow: 0;
+     -moz-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  -webkit-flex-shrink: 0;
+      -ms-flex-negative: 0;
+          flex-shrink: 0; }
+  body .tag-item .tag-item-title:before {
+    content: '#';
+    padding: 1px; }
+
+body .poster-item {
+  width: 20%;
+  height: 135px;
+  background: url(/Content/images/de_los_insurgentes_avenue_chihuahua_mexico.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  -moz-background-size: cover;
+  background-size: cover;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  /* flex-wrap: wrap; */
+  /* justify-content: space-between; */
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+     -moz-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  margin: 10px; }
+
+body .poster-list {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  /* flex-grow: 1; */
+  /* justify-content: space-between; */ }
+
+body .tag-item-content-wrp {
+  font-size: 26px;
+  font-family: 'Arimo Regular'; }
