--- a/NLI/Built/main.css
+++ b/NLI/Built/main.css
@@ -12,6 +12,13 @@
   src: url("/Content/fonts/HelveticaNeue.eot?#iefix") format("embedded-opentype"), url("/Content/fonts/HelveticaNeue.woff") format("woff"), url("/Content/fonts/HelveticaNeue.ttf") format("truetype");
   font-weight: normal;
   font-style: normal; }
+
+@font-face {
+  font-family: 'Arimo Regular';
+  src: url("/Content/fonts/Arimo-Regular.eot");
+  src: url("/Content/fonts/Arimo-Regular.eot?#iefix") format("embedded-opentype"), url("/Content/fonts/Arimo-Regular.woff") format("woff"), url("/Content/fonts/Arimo-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal; }
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -260,3 +267,170 @@ body {
   body .timeline-item:nth-child(6) {
     background: -moz-linear-gradient(bottom, rgba(108, 138, 255, 0.6), rgba(153, 114, 255, 0.6)), url("/Content/images/de_los_insurgentes_avenue_chihuahua_mexico.jpg");
     background: linear-gradient(0deg, rgba(108, 138, 255, 0.6), rgba(153, 114, 255, 0.6)), url("/Content/images/de_los_insurgentes_avenue_chihuahua_mexico.jpg"); }
+.categories-decade-info-wrp {
+  margin-bottom: -4rem; }
+
+.categories {
+  max-width: 800px;
+  margin: 0 auto; }
+
+.categories-decade-info {
+  background: #2475FA; }
+
+.categories-content-wrp {
+  background-color: white;
+  font-family: 'Arimo Regular'; }
+.categories-content-wrp {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap; }
+
+.category-item {
+  position: relative;
+  background: url("/Content/images/de_los_insurgentes_avenue_chihuahua_mexico.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  -moz-background-size: cover;
+       background-size: cover;
+  color: #2475FA;
+  font-weight: bold;
+  list-style: none;
+  font-size: 40px;
+  font-family: 'Arimo Regular';
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+     -moz-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  width: 50%;
+  -moz-border-radius: 5px;
+       border-radius: 5px;
+  width: 45%;
+  background-color: red;
+  margin: 1rem;
+  height: 250px;
+  z-index: 5;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+     -moz-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+     -moz-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: 1px solid #878787;
+  -moz-border-radius: 15px;
+       border-radius: 15px;
+  -moz-box-shadow: 0px 3px 6px #000000;
+       box-shadow: 0px 3px 6px #000000; }
+  .category-item:hover {
+    cursor: pointer; }
+  .category-item:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    margin: auto;
+    background: #fff;
+    opacity: 0.95;
+    -moz-border-radius: 15px;
+         border-radius: 15px; }
+
+.category-item-title:hover {
+  cursor: pointer; }
+
+.category-item-content-wrp {
+  z-index: 20; }
+body .categories-decade-info {
+  padding: 10rem;
+  position: relative; }
+
+body .categories-decade-title {
+  font-size: 80px;
+  font-family: 'Rubik';
+  font-weight: bold; }
+
+body .categories-decade-count {
+  font-size: 39px;
+  font-family: 'Helvetica Neue'; }
+body #root {
+  background-color: white;
+  min-width: 0 !important; }
+body .tag-list {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+body .tag-item {
+  width: 135px;
+  height: 135px;
+  background: url("/Content/images/de_los_insurgentes_avenue_chihuahua_mexico.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  -moz-background-size: cover;
+       background-size: cover;
+  margin: 13px;
+  -moz-border-radius: 10px;
+       border-radius: 10px;
+  -webkit-box-flex: 0;
+  -webkit-flex-grow: 0;
+     -moz-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  -webkit-flex-shrink: 0;
+      -ms-flex-negative: 0;
+          flex-shrink: 0; }
+  body .tag-item .tag-item-title:before {
+    content: '#';
+    padding: 1px; }
+
+body .poster-item {
+  width: 20%;
+  height: 135px;
+  background: url(/Content/images/de_los_insurgentes_avenue_chihuahua_mexico.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  -moz-background-size: cover;
+  background-size: cover;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  /* flex-wrap: wrap; */
+  /* justify-content: space-between; */
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+     -moz-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  margin: 10px; }
+
+body .poster-list {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  /* flex-grow: 1; */
+  /* justify-content: space-between; */ }
+
+body .tag-item-content-wrp {
+  font-size: 26px;
+  font-family: 'Arimo Regular'; }
