--- a/NLI/Built/main.css
+++ b/NLI/Built/main.css
@@ -118,8 +118,52 @@ input, select {
   opacity: 1; }
 .app-wrap {
   position: relative; }
+.site-header {
+  background-color: #2475FA;
+  font-size: 34px;
+  font-family: 'Arimo Regular';
+  font-weight: bold;
+  height: 100px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+     -moz-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+     -moz-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  margin-bottom: 3rem; }
+
 .site-navigation {
   text-align: left; }
+
+.site-header-arrow-back {
+  position: absolute; }
+
+.site-header-arrow-back {
+  position: absolute;
+  left: 20px;
+  top: 36px;
+  background-color: red;
+  height: 25px;
+  width: 25px; }
+
+.site-header-arrow-back {
+  background: url("/Content/icons/arrow@3x.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  -moz-background-size: cover;
+  background-size: contain; }
+  .site-header-arrow-back:hover {
+    cursor: pointer; }
 .site-navigation-item {
   display: inline-block;
   margin-left: 30px;
@@ -369,6 +413,43 @@ body .categories-decade-count {
 body #root {
   background-color: white;
   min-width: 0 !important; }
+
+body .tag-main-title-wrp {
+  color: #2475FA;
+  margin: 2rem;
+  /*display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin: 0 auto;
+        */
+  position: relative;
+  z-index: 1; }
+  body .tag-main-title-wrp:before {
+    border-top: 2px solid #dfdfdf;
+    content: "";
+    margin: 0 auto;
+    /* this centers the line to the full width specified */
+    position: absolute;
+    /* positioning must be absolute here, and relative positioning must be applied to the parent */
+    top: 50%;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 95%;
+    z-index: -1; }
+  body .tag-main-title-wrp span {
+    /* to hide the lines from behind the text, you have to set the background color the same as the container */
+    background: #fff;
+    padding: 0 15px; }
+
+body .tag-main-title {
+  font-size: 30px;
+  font-family: 'Arimo Regular';
+  font-weight: bold; }
+
+body .tag-main-title-count {
+  font-size: 24px;
+  font-family: 'Arimo Regular'; }
 body {
   background-color: transparent; }
   body .tag-list {
@@ -377,7 +458,8 @@ body {
     display: -moz-box;
     display: -ms-flexbox;
     display: flex;
-    overflow-x: auto; }
+    overflow-x: auto;
+    overflow-y: hidden; }
   body .tag-item .tag-item-title:before {
     content: '#';
     padding: 1px; }
@@ -399,7 +481,16 @@ body {
             flex-grow: 0;
     -webkit-flex-shrink: 0;
         -ms-flex-negative: 0;
-            flex-shrink: 0; }
+            flex-shrink: 0;
+    -moz-box-shadow: 1px 1px 14px lightgrey;
+         box-shadow: 1px 1px 14px lightgrey;
+    -moz-box-sizing: border-box;
+         box-sizing: border-box; }
+    body .tag-item-image:hover {
+      cursor: pointer; }
+  body .active-category {
+    border: 1px solid red;
+    border: 2px solid #2475FA; }
   body .poster-item {
     background: url(/Content/images/de_los_insurgentes_avenue_chihuahua_mexico.jpg);
     background-repeat: no-repeat;
@@ -411,8 +502,10 @@ body {
     /* flex-wrap: wrap; */
     /* justify-content: space-between; */
     width: 20vw;
-    height: 20vh;
+    height: 135px;
     margin: 10px; }
+    body .poster-item:hover {
+      cursor: pointer; }
   body .poster-list {
     display: -webkit-box;
     display: -webkit-flex;
