--- a/NLI/Components/Tags/Components/TagItem/TagItem.scss
+++ b/NLI/Components/Tags/Components/TagItem/TagItem.scss
@@ -5,6 +5,7 @@
     .tag-list{
         display: flex;
         overflow-x: auto;
+        overflow-y: hidden;
     }
 
     .tag-item{
@@ -28,7 +29,21 @@
         border-radius: 10px;
         flex-grow: 0;
         flex-shrink: 0;
+        box-shadow: 1px 1px 14px lightgrey;
+        box-sizing: border-box;
+
+        &:hover{
+            cursor:pointer;
+        }
+        
     }
+
+    .active-category{
+        border:1px solid red;    
+            border: 2px solid #2475FA;
+    
+    }
+
 
     .poster-item{
        
@@ -42,8 +57,12 @@
         /* flex-wrap: wrap; */
         /* justify-content: space-between; */
         width: 20vw;
-    height: 20vh;
+    height: 135px;
         margin: 10px;
+
+        &:hover{
+            cursor:pointer;
+        }
     }
 
     .poster-list{
