--- a/NLI/Components/Tags/Tags.scss
+++ b/NLI/Components/Tags/Tags.scss
@@ -3,4 +3,44 @@
         background-color: white;
         min-width:0 !important;
     }
+
+    .tag-main-title-wrp{
+        color: #2475FA;
+           margin: 2rem;
+    /*display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin: 0 auto;
+        */
+    position: relative;
+    z-index: 1;
+    
+            &:before {
+                border-top: 2px solid #dfdfdf;
+                content:"";
+                margin: 0 auto; /* this centers the line to the full width specified */
+                position: absolute; /* positioning must be absolute here, and relative positioning must be applied to the parent */
+                top: 50%; left: 0; right: 0; bottom: 0;
+                width: 95%;
+                z-index: -1;
+            }
+
+            span { 
+        /* to hide the lines from behind the text, you have to set the background color the same as the container */ 
+        background: #fff; 
+        padding: 0 15px; 
+    }
+    }
+
+    .tag-main-title{
+        font-size: 30px;
+        font-family: 'Arimo Regular';
+        font-weight: bold;
+    }
+
+    .tag-main-title-count{
+        font-size: 24px;
+        font-family: 'Arimo Regular';
+
+    }
 }
