--- a/NLI/Components/Categories/Categories.scss
+++ b/NLI/Components/Categories/Categories.scss
@@ -22,5 +22,14 @@
     .category-list{
             display: flex;
     flex-wrap: wrap;
+    margin: 0 auto;
+    }
+
+    .selected{
+        border: 3px solid #2475FA !important;
+    }
+
+    .category-item{
+        box-sizing: border-box;
     }
 
