--- a/NLI/Built/main.css
+++ b/NLI/Built/main.css
@@ -341,6 +341,19 @@ body {
 .category-item {
   -moz-box-sizing: border-box;
        box-sizing: border-box; }
+
+.continue-btn {
+  font-family: 'Arimo Regular';
+  background-color: #3369E4;
+  width: 30%;
+  color: white;
+  -moz-border-radius: 61px;
+       border-radius: 61px;
+  font-size: 30px;
+  padding: 3rem;
+  margin: 4rem; }
+  .continue-btn:hover {
+    cursor: pointer; }
 .categories-content-wrp {
   display: -webkit-box;
   display: -webkit-flex;
@@ -428,6 +441,74 @@ body .categories-decade-title {
 body .categories-decade-count {
   font-size: 39px;
   font-family: 'Helvetica Neue'; }
+body .poster-details-image {
+  background: url("/Content/images/de_los_insurgentes_avenue_chihuahua_mexico.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  -moz-background-size: cover;
+       background-size: cover;
+  height: 600px;
+  width: 90%;
+  margin: 0 auto;
+  -moz-border-radius: 10px;
+       border-radius: 10px; }
+
+body .poster-details-content-wrp {
+  width: 85%;
+  margin: 0 auto; }
+
+body .poster-details-info-title {
+  color: #2475FA;
+  font-family: 'Arimo Regular';
+  font-size: 34px;
+  text-align: right;
+  margin: 3rem 0; }
+
+body .poster-details-info-list {
+  color: #5C5C5C; }
+
+body .poster-details-info-item {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+     -moz-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-size: 24px;
+  font-family: 'Arimo Regular';
+  margin: 2rem 0; }
+
+body .poster-details-info-item-title {
+  font-weight: bold;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+     -moz-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex; }
+  body .poster-details-info-item-title:before {
+    content: '';
+    background: url(/Content/icons/bullet@3x.png);
+    width: 20px;
+    height: 20px;
+    /* position: absolute; */
+    /* margin: 1rem; */
+    display: inline-block;
+    -moz-background-size: cover;
+         background-size: cover;
+    margin-left: 5px;
+    /* float: right; */ }
+
+body .poster-details-heading {
+  margin: 6rem 0; }
 body #root {
   background-color: white;
   min-width: 0 !important; }
