--- a/NLI/Views/Shared/_Layout.cshtml
+++ b/NLI/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>הספרייה הלאומית</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <link href="~/Built/main.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
