--- a/NLI/Components/TimeLine/TimeLine.scss
+++ b/NLI/Components/TimeLine/TimeLine.scss
@@ -12,45 +12,46 @@
 
     .timeline-item{
 
-        background: linear-gradient(0deg,rgba(108,138,255,0.6),rgba(153,114,255,0.6)),url('/Content/images/de_los_insurgentes_avenue_chihuahua_mexico.jpg');
+        background: url('/Content/images/de_los_insurgentes_avenue_chihuahua_mexico.jpg');
         background-repeat: no-repeat;
         background-position: center center;
         background-size: cover;
         margin: 1rem;
         border-radius: 5px;
         padding: 5rem;
-
+        color: #2475FA;
+            z-index: 20;
+                position: relative;
         .timeline-item-title{
             font-size: 60px;
             margin: 1rem;
             font-family: 'Helvetica Neue';
+            z-index: 60;
+                position: relative;
         }
 
         .timeline-item-count{
             font-size: 30px;
             margin: 1rem;
             font-family: 'Rubik';
+            z-index: 60;
+                position: relative;
+        }
+
+        &:after{
+                content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    margin: auto;
+    background: #fff;
+    opacity: 0.9;
+   
+  
         }
     }
 
-    .timeline-item:nth-child(1){
-        background: linear-gradient(0deg,rgba(153,114,255,0.9)), (rgba(108,138,255,0.9)),url('/Content/images/de_los_insurgentes_avenue_chihuahua_mexico.jpg');
-    }
-
-    .timeline-item:nth-child(2){
-        background: linear-gradient(0deg,rgba(108,138,255,0.6),rgba(153,114,255,0.6)),url('/Content/images/de_los_insurgentes_avenue_chihuahua_mexico.jpg');
-    }
-    .timeline-item:nth-child(3){
-        background: linear-gradient(0deg,rgba(108,138,255,0.6),rgba(153,114,255,0.6)),url('/Content/images/de_los_insurgentes_avenue_chihuahua_mexico.jpg');
-    }
-    .timeline-item:nth-child(4){
-        background: linear-gradient(0deg,rgba(108,138,255,0.6),rgba(153,114,255,0.6)),url('/Content/images/de_los_insurgentes_avenue_chihuahua_mexico.jpg');
-    }
-    .timeline-item:nth-child(5){
-        background: linear-gradient(0deg,rgba(108,138,255,0.6),rgba(153,114,255,0.6)),url('/Content/images/de_los_insurgentes_avenue_chihuahua_mexico.jpg');
-    }
-    .timeline-item:nth-child(6){
-        background: linear-gradient(0deg,rgba(108,138,255,0.6),rgba(153,114,255,0.6)),url('/Content/images/de_los_insurgentes_avenue_chihuahua_mexico.jpg');
-    }
 
 }
