--- a/NLI/Components/Tags/Tags.scss
+++ b/NLI/Components/Tags/Tags.scss
@@ -4,6 +4,10 @@
         min-width:0 !important;
     }
 
+    .timeline-page{
+        background-color:#2475FA!important;
+    }
+
     .tag-main-title-wrp{
         color: #2475FA;
            margin: 2rem;
