--- a/NLI/Built/main.css
+++ b/NLI/Built/main.css
@@ -333,12 +333,11 @@ body {
           flex-wrap: wrap;
   margin: 0 auto; }
 
-.selected {
-  border: 3px solid #2475FA !important; }
-
 .category-item {
   -moz-box-sizing: border-box;
        box-sizing: border-box; }
+  .category-item.selected {
+    border: 3px solid #2475FA !important; }
 
 .continue-btn {
   font-family: 'Arimo Regular';
