--- a/NLI/Built/main.css
+++ b/NLI/Built/main.css
@@ -531,6 +531,7 @@ body {
     background-position: center center;
     -moz-background-size: cover;
     background-size: cover;
+    display: inline-block;
     /*
         -webkit-flex-wrap: wrap;
         -ms-flex-wrap: wrap;
@@ -541,21 +542,6 @@ body {
     height: 135px; }
     body .poster-item:hover {
       cursor: pointer; }
-  body .poster-list {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
-    /* flex-grow: 1; */
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-       -moz-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between; }
   body .tag-item-content-wrp {
     font-size: 26px;
     font-family: 'Arimo Regular';
