--- a/NLI/Components/Tags/Components/TagItem/TagItem.scss
+++ b/NLI/Components/Tags/Components/TagItem/TagItem.scss
@@ -55,6 +55,7 @@
         background-position: center center;
         -moz-background-size: cover;
         background-size: cover;
+        display: inline-block;
         /*
         -webkit-flex-wrap: wrap;
         -ms-flex-wrap: wrap;
@@ -70,10 +71,7 @@
     }
 
     .poster-list{
-        display: flex;
-        flex-wrap: wrap;
-        /* flex-grow: 1; */
-        justify-content: space-between; 
+        
     }
 
     .tag-item-content-wrp{
